--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
