--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.1",
     "@tanstack/react-query-devtools": "^5.81.5",
@@ -18,9 +19,11 @@
     "pdfjs-dist": "^5.3.93",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-pdf": "^10.0.1",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11",
+    "zod": "^4.0.14",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
