feat: 카드 추가 기능 설정 완료

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,5 +23,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "mockData/portfolio"]
+  "include": ["src", "src/components/common/cards/portfolio"]
 }
