--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.83.1",
     "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
     "pdfjs-dist": "^5.3.93",
     "react": "^19.1.0",
