--- a/.env.preview
+++ b/.env.preview
@@ -10,6 +10,7 @@ VITE_API_ME_ENDPOINT=/api/v1/members/me
 VITE_API_SIGNUP_ENDPOINT=/api/v1/members/join
 VITE_API_SOCIAL_CALLBACK=/v1/members/callback/{provider}
 VITE_SOCIAL_CALLBACK = /auth/social/callback
+VITE_API_SOCIAL_API_CALLBACK_DEFAULT=/api/v1/members/callback/GOOGLE
 VITE_GOOGLE_CLIENT_ID= 738809626033-m88edcdvk0bd21bfln022d0v9hntmbjv.apps.googleusercontent.com
 VITE_KAKAO_REST_KEY= 5236317e0fad1c3b7797888f99702a85
 
