--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.83.1",
     "@tanstack/react-query-devtools": "^5.81.5",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
     "pdfjs-dist": "^5.3.93",
